<resources>
    <string name="app_name">MentorGram</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="codehive_id">Codehive id</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="register">Register</string>
    <string name="aleardy_signed_up_login">Aleardy signed Up? Login</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
</resources>